--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ pandas
 parameterized
 psutil
 pre-commit
-pyzmq==20.0.0
+pyzmq==23.2.1
 tabulate
 tensorboard
 torch
@@ -25,6 +25,6 @@ pyyaml
 python-hostlist
 gym>=0.9.6
 requests
-grpcio==1.15.0
-grpcio-tools==1.15.0
+grpcio~=1.20
+grpcio-tools~=1.20
 submitit~=1.4
